# third_party_libabigail

./: BUILD.gn  ChangeLog  Makefile.am  NEWS  OAT.xml  README.OpenSource  README_OpenHarmony.md  SECURITY  bundle.json  config.h  config.h.in  configure.ac  default.abignore
doc/api/: libabigail.doxy
doc/manuals/: Makefile.am  abi-artifacts.rst  abi-changes.rst  abicompat.rst  abidb.rst  abidiff.rst  abidw.rst  abilint.rst  abipkgdiff.rst  conf.py  fedabipkgdiff.rst  index.rst  libabigail-concepts.rst  libabigail-tools.rst  suppression-specifications.rst
doc/website/: libabigail-website.doxy
include/: abg-btf-reader.h  abg-comp-filter.h  abg-comparison.h  abg-config.h  abg-corpus.h  abg-ctf-reader.h  abg-cxx-compat.h  abg-diff-utils.h  abg-dwarf-reader.h  abg-elf-based-reader.h  abg-elf-reader.h  abg-fe-iface.h  abg-fwd.h  abg-hash.h  abg-ini.h  abg-interned-str.h  abg-ir.h  abg-libxml-utils.h  abg-reader.h  abg-regex.h  abg-reporter.h  abg-sptr-utils.h  abg-suppression.h  abg-tools-utils.h  abg-traverse.h  abg-version.h  abg-viz-common.h  abg-viz-dot.h  abg-viz-svg.h  abg-workers.h  abg-writer.h
src/: BUILD.gn  Makefile.am  abg-btf-reader.cc  abg-comp-filter.cc  abg-comparison-priv.h  abg-comparison.cc  abg-config.cc  abg-corpus-priv.h  abg-corpus.cc  abg-ctf-reader.cc  abg-default-reporter.cc  abg-diff-utils.cc  abg-dwarf-reader.cc  abg-elf-based-reader.cc  abg-elf-helpers.cc  abg-elf-helpers.h  abg-elf-reader.cc  abg-fe-iface.cc  abg-hash.cc  abg-ini.cc  abg-internal.h  abg-ir-priv.h  abg-ir.cc  abg-leaf-reporter.cc  abg-libxml-utils.cc  abg-reader.cc  abg-regex.cc  abg-reporter-priv.cc  abg-reporter-priv.h  abg-suppression-priv.h  abg-suppression.cc  abg-symtab-reader.cc  abg-symtab-reader.h  abg-tools-utils.cc  abg-traverse.cc  abg-viz-common.cc  abg-viz-dot.cc  abg-viz-svg.cc  abg-workers.cc  abg-writer.cc
tests/: test-abidiff-exit.cc  test-diff-pkg.cc  test-diff-suppr.cc
tests/data/test-abidiff/: test-PR18791-report0.txt
tests/data/test-abidiff-exit/: test-anon-types-v0.c  test-anon-types-v1.c  test-anonymous-enums-change-v0.c  test-anonymous-enums-change-v1.c  test-enumerator-changes1-v0.c  test-enumerator-changes1-v1.c  test-fam1-suppr-1.abignore  test-fam1-suppr-2.abignore  test-fam1-suppr-3.abignore  test-fam1-suppr-4.abignore  test-fam1-v0.c  test-fam1-v1.c  test-fam2-v0.c  test-fam2-v1.c
tests/data/test-annotate/: libtest23.so.abi  libtest24-drop-fns-2.so.abi  test-anonymous-members-0.o.abi  test15-pr18892.so.abi  test17-pr19027.so.abi  test18-pr19037-libvtkRenderingLIC-6.1.so.abi  test19-pr19023-libtcmalloc_and_profiler.so.abi  test20-pr19025-libvtkParallelCore-6.1.so.abi  test21-pr19092.so.abi
tests/data/test-diff-dwarf/: test42-PR21296-clanggcc-report0.txt  test43-PR22913-report-0.txt
tests/data/test-diff-filter/: test31-pr18535-libstdc++-report-1.txt  test41-report-0.txt
tests/data/test-diff-suppr/: test-has-data-member-inserted-at-1-v0.c  test-has-data-member-inserted-at-1-v1.c  test-has-data-member-inserted-at-1.1.suppr  test-has-data-member-inserted-at-1.2.suppr  test-has-data-member-inserted-at-2-v0.c  test-has-data-member-inserted-at-2-v1.c  test-has-data-member-inserted-at-2.2.suppr  test-has-data-member-inserted-at-2.suppr  test-has-data-member-inserted-at-3-v0.c  test-has-data-member-inserted-at-3-v1.c  test40.1-enumerator-changes-enumerator-changes-1.suppr  test40.1-enumerator-changes-enumerator-changes-2.suppr  test40.1-enumerator-changes-enumerator-changes-3.suppr  test40.1-enumerator-changes-enumerator-changes-4.suppr  test40.1-enumerator-changes-enumerator-changes-5.suppr  test40.1-enumerator-changes-enumerator-changes-v0.c  test40.1-enumerator-changes-enumerator-changes-v1.c
tests/data/test-read-dwarf/: PR22015-libboost_iostreams.so.abi  PR22122-libftdc.so.abi  PR25007-sdhci.ko.abi  libtest23.so.abi  libtest24-drop-fns-2.so.abi  test-libaaudio.so.abi  test-libandroid.so.abi  test0.hash.abi  test1.hash.abi  test10-pr18818-gcc.so.abi  test11-pr18828.so.abi  test12-pr18844.so.abi  test15-pr18892.so.abi  test16-pr18904.so.abi  test17-pr19027.so.abi  test18-pr19037-libvtkRenderingLIC-6.1.so.abi  test19-pr19023-libtcmalloc_and_profiler.so.abi  test20-pr19025-libvtkParallelCore-6.1.so.abi  test21-pr19092.so.abi  test9-pr18818-clang.so.abi
tests/data/test-read-write/: test28-without-std-fns-ref.xml  test28-without-std-vars-ref.xml
tools/: BUILD.gn  Makefile.am  abicompat.cc  abidb  abidiff.cc  abidw.cc  abilint.cc  abipkgdiff.cc  abisym.cc  binilint.cc  fedabipkgdiff  kmidiff.cc
