# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

# Build libabigail
ohos_static_library("libabigail_static") {
  configs = [ "//third_party/libabigail:libabigail_defaults" ]

  sources = [
    "abg-comp-filter.cc",
    "abg-comparison.cc",
    "abg-config.cc",
    "abg-corpus.cc",
    "abg-default-reporter.cc",
    "abg-diff-utils.cc",
    "abg-dwarf-reader.cc",
    "abg-elf-based-reader.cc",
    "abg-elf-helpers.cc",
    "abg-elf-reader.cc",
    "abg-fe-iface.cc",
    "abg-hash.cc",
    "abg-ini.cc",
    "abg-ir.cc",
    "abg-leaf-reporter.cc",
    "abg-libxml-utils.cc",
    "abg-reader.cc",
    "abg-regex.cc",
    "abg-reporter-priv.cc",
    "abg-suppression.cc",
    "abg-symtab-reader.cc",
    "abg-tools-utils.cc",
    "abg-traverse.cc",
    "abg-writer.cc",
  ]

  include_dirs = [
    "//third_party/libabigail",
    "//third_party/libabigail/include",
    "//third_party/libabigail/src",
    "//third_party/libxml2/include",
  ]

  deps = [
    "//third_party/elfutils:libdw_static",
    "//third_party/elfutils:libelf_static",
    "//third_party/libxml2:libxml2",
  ]

  defines = [ "ABIGAIL_ROOT_SYSTEM_LIBDIR=\"lib\"" ]

  subsystem_name = "thirdparty"
  part_name = "libabigail"
}

ohos_shared_library("libabigail") {
  deps = [ ":libabigail_static" ]
  subsystem_name = "thirdparty"
  part_name = "libabigail"
  if (is_ohos) {
    output_extension = "so"
  }
  install_images = [ "system" ]
}
