# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

# Build abidiff
ohos_executable("abidiff") {
  configs = [ "//third_party/libabigail:libabigail_defaults" ]
  sources = [ "abidiff.cc" ]

  include_dirs = [
    "//third_party/libabigail",
    "//third_party/libabigail/include",
  ]

  deps = [ "//third_party/libabigail/src:libabigail_static" ]
  external_deps = [ "elfutils:libdw_static" ]

  ldflags = [
    "-lxml2",
    "-llzma",
  ]
  install_enable = false
  subsystem_name = "thirdparty"
  part_name = "libabigail"
  license_file = "../LICENSE.txt"
}

# Build abidw
ohos_executable("abidw") {
  configs = [ "//third_party/libabigail:libabigail_defaults" ]
  sources = [ "abidw.cc" ]

  include_dirs = [
    "//third_party/libabigail",
    "//third_party/libabigail/include",
  ]

  deps = [ "//third_party/libabigail/src:libabigail_static" ]
  external_deps = [ "elfutils:libdw_static" ]

  ldflags = [
    "-lxml2",
    "-llzma",
  ]
  install_enable = false
  subsystem_name = "thirdparty"
  part_name = "libabigail"
  license_file = "../LICENSE.txt"
}
